--- a/src/App.css
+++ b/src/App.css
@@ -42,7 +42,7 @@ html {
 
 .create-button {
   padding: 0.75rem 1.5rem;
-  background-color: #4CAF50;
+  background-color: #45a049d7;
   color: white;
   border: none;
   border-radius: 4px;
